Simply increase some comment to Readme main.cpp -> main.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ FreeRTOS/portable/*.h
 )
 
 
-set(SOURCE_FILES main.cpp ${FreeRTOSSrc})
+set(SOURCE_FILES main.c ${FreeRTOSSrc})
 include_directories(. FreeRTOS/include FreeRTOS/portable)
 
 
